--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Schedule::Easing
 
 0.1.2 - 2025-08-24
-	- Support --expiration and warnExpired
+	- Support --expiration, --check, and warnExpired
 
 0.1.1 - 2025-08-23
 	- Shaping functions should work
