--- a/TODO.pod
+++ b/TODO.pod
@@ -14,6 +14,10 @@ Documentation is likely incomplete.
 
 (Available with 0.1.3)  C<schedule-easing.pl --timestamps> should work.  It is currently available but not well tested.
 
+=head2 Bug in Power and Step inverses
+
+By definition, the linear inverse for an out-of-range C<y> value is undefined.  The same should be true for the Power and Step inverse functions.  This needs to be updated for the C<schedule> display option to work correctly.
+
 =head1 Tests
 
 All of the following need tests reviewed:
