--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Schedule::Easing
 
+0.1.4 - ??
+	- Support begin>final in shaping functions
+	- Fix power/step inverses for out-of-range inputs
+
 0.1.3 - 2025-08-29
 	- Utilize Schedule::Easing::Stream
 	- Support --stream options
