--- a/TODO.pod
+++ b/TODO.pod
@@ -14,9 +14,13 @@ Documentation is likely incomplete.
 
 (Available with 0.1.3)  C<schedule-easing.pl --timestamps> should work.  It is currently available but not well tested.
 
-=head2 Bug in Power and Step inverses
+=head2 Reducing/decreasing messages over time is experimental
 
-By definition, the linear inverse for an out-of-range C<y> value is undefined.  The same should be true for the Power and Step inverse functions.  This needs to be updated for the C<schedule> display option to work correctly.
+Behavior when C<beginE<gt>final> has initial but incomplete tests.  Documentation may be incomplete.
+
+=head2 Power and Step inverses are experimental
+
+The functions have not been fully tested with the C<timestamps> calculations.
 
 =head1 Tests
 
@@ -41,10 +45,6 @@ All of the following need tests reviewed:
 =head2 C<Schedule::Easing::Stream>, C<alarm()>, and C<clock>
 
 See the comment about the single-use alarm() and how the C<clock> setting overlaps with the timing of batch processing.
-
-=head2 Reducing messages over time
-
-Behavior when C<beginE<gt>final> is undefined/untested.  There may be situations where message reduction is desirable, such as when messages will be removed prior to other cleanup/refactoring/deprecation efforts.
 
 =head2 Item weighting
 
