--- a/Changes
+++ b/Changes
@@ -1,10 +1,10 @@
 Revision history for Schedule::Easing
 
-0.1.4 - ??
+0.1.4 - 2025-09-14
 	- Support begin>final in shaping functions
+	- Support begin>final for timestamps/::schedule
 	- Fix power/step inverses for out-of-range inputs
 	- Fix Block::schedule
-	- Support ::schedule for begin>final
 
 0.1.3 - 2025-08-29
 	- Utilize Schedule::Easing::Stream
